--- a/views/room.ejs
+++ b/views/room.ejs
@@ -9,8 +9,8 @@
 <script>
     const ROOM_ID = "<%= roomId %>";
 </script>
-<script type="text/javascript" src="/socket.io/socket.io.js" defer></script>
-<script src="/js/ScriptStreamEcran.js" type="text/javascript" defer></script>
+<script type="text/javascript" src="/public/js/ScriptStreamEcran.js" defer></script>
+<script type="text/javascript" src="/node_modules/socket.io/client-dist/socket.io.js"  defer></script>
 
 
 <body>
